Enhance README with detailed project info and instructions
Expanded project description and added requirements and compile instructions.